--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -64,7 +64,7 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .sub_title_content::after{ content: ""; position: absolute; width:calc( 100% - 30px); top: 24px; left: 15px; z-index: 0; height: 1px; display: block; border-bottom: 5px solid #FFC924;  }
 .main_container .sub_title_content h4{ font-size: 25px; position: absolute; top: 12px; left: 0; width: 100%; z-index: 2; text-align: center;}
 .main_container .sub_title_content h4 span{ font-weight: 600; background-color: #fff; padding: 0 40px; min-width: 220px;}
-.main_container .sub_title_content p{ font-size: 16px; padding: 10px 0 18px; text-align: center; }
+.main_container .sub_title_content p{ font-size: 16px; padding: 10px 10px 18px 10px; text-align: center; }
 .main_container .sub_title_content p span{ font-size: 13px; padding-top: 12px; display: inline-block; font-weight: 400;}
 
 .main_container .data_flow{ padding-top: 5px; border-top: 2px solid #C3C3C3;  }
@@ -82,7 +82,7 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .labels p{ float: left; padding: 2px 6px; line-height: 21px; position: relative; margin-right: 5px; font-size: 14px; }
 .main_container .labels p.star{ background-color: #fff; font-size: 16px; padding-left: 20px;}
 .main_container .labels p.star::after{ content: ""; position: absolute; top: calc(50% - 8px); left: 3px; width: 15px; height: 15px; background-image: url(../images/svg/recommendation_star.svg); background-size: contain;}
-.main_container .labels p.hot{ background-color: #C90410; padding: 2px 12px; color: #fff; font-weight: 500;}
+.main_container .labels p.hot{ background-color: #C90410; padding: 1.5px 10px; color: #fff; font-weight: 500;}
 
 .main_container .area_content ul.area_list li .area_photo{ width: 100%; height: 145px; background-position: center center; background-repeat: no-repeat; background-size: cover;}
 .main_container .area_content ul.area_list li .labels{ position: absolute; top: 8px; left: 10px; }
@@ -117,12 +117,12 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .tab_capacity > ul > li.btn_03{ background-color: #FF8026; }
 .main_container .tab_capacity > ul > li.btn_03 p::after{ background-image: url(../images/svg/capacity_img_03.svg); }
 .main_container .tab_capacity > ul > li.active{ background-color: #FFC924;}
-.main_container .tab_capacity > ul > li.active:nth-child(2){background-color: #FF9124;}
+.main_container .tab_capacity > ul > li.active:nth-child(2){background-color: #FFA424;}
 .main_container .tab_capacity > ul > li.active:nth-child(3){background-color: #FF8026;}
 
 .main_container .tab_capacity > ul > li.active::after{  display: none; }
 .main_container .tab_capacity > .tab_inner{ clear:both; color:#000; border:5px #FFC924 solid;}
-.main_container .tab_capacity > .tab_inner#tab02{border-color: #FF9124;}
+.main_container .tab_capacity > .tab_inner#tab02{border-color: #FFA424;}
 .main_container .tab_capacity > .tab_inner#tab03{border-color: #FF8026;}
 
 .main_container .tab_capacity .tab_inner{ padding:25px; min-height: 350px; text-align: center;}
@@ -176,13 +176,13 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .travel_plan_content .area_photo .photo_01, .main_container .travel_plan_content .area_photo .photo_02{ width: 50%;}
 
 .main_container .travel_plan_content_two{ width: 100%; max-width: 1100px; margin: 0 auto 50px auto;}
-.main_container .travel_plan_content_two .plan_info{ width: 65%; float: left; padding: 20px 25px; position: relative; border-radius: 20px; border: 1.8px solid #333;display: block; overflow: hidden; box-shadow: 4px 4px 0 #FFAF24;}
+.main_container .travel_plan_content_two .plan_info{ width: 65%; float: left; padding: 35px 25px 20px 25px; position: relative; border-radius: 20px; border: 1.8px solid #333;display: block; overflow: hidden; box-shadow: 4px 4px 0 #FFAF24;}
 .main_container .travel_plan_content_two .plan_info .show_more_info{ margin-top: 10px;}
 .main_container .travel_plan_content_two .plan_info .show_more_info h4{ font-size: 16px; font-weight: 600; border-bottom: 1.8px solid #6091CD; padding: 5px 0; position: relative;}
 .main_container .travel_plan_content_two .plan_info .show_more_info h4::before{ content: "◆"; padding-right: 5px;} 
 .main_container .travel_plan_content_two .plan_info .show_more_info p{ font-size: 13px; }
 .main_container .travel_plan_content_two .plan_info .show_more_info .mob_show{ padding: 5px 0; }
-.main_container .travel_plan_content_two .labels { padding-bottom: 5px; }
+.main_container .travel_plan_content_two .labels { position: absolute; top: 9px; }
 
 .main_container .travel_plan_content_two .country_amount{ text-align: left; border-bottom: 1.8px solid #6091CD; margin-bottom: 10px; position: relative;}
 .main_container .travel_plan_content_two .country_amount::before{ content: ""; position: absolute; width: 126px; height:57px; display: block; right: 0; bottom: 0; background-image: url(../images/bg_img_aircraft.png);}
@@ -194,7 +194,7 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .travel_plan_content_two ul.note li p{ font-size: 11px; }
 
 .main_container .travel_plan_content_two .right_info{ width: 35%; max-width: 355px; float: right; padding-left: 30px;}
-.main_container .travel_plan_content_two .right_info .country_amount{ padding-top: 30px; text-align: center;}
+.main_container .travel_plan_content_two .right_info .country_amount{ text-align: center;}
 .main_container .travel_plan_content_two .right_info .country_amount h4{ padding-right: 0; }
 .main_container .travel_plan_content_two .right_info .country_amount::before{ display: none; }
 .main_container .travel_plan_content_two .right_info .country_info{ text-align: center; }
@@ -229,7 +229,7 @@ body { font-size: 1.6rem;}
 
 footer{ background-color: #ededed;}
 footer .contact_info_inner { padding: 20px 40px 40px;}
-footer div.inner{width: 100%; max-width: 1150px; margin: 0 auto;padding: 2em 2em 6em;;text-align: left;background: url(../images/svg/bg_footer.jpg) 80% bottom no-repeat;background-size: contain}
+footer div.inner{width: 100%; max-width: 1100px; margin: 0 auto;padding: 2em 2em 6em;;text-align: left;background: url(../images/svg/bg_footer.jpg) 80% bottom no-repeat;background-size: contain}
 footer .copyright-area{ position: relative; padding: 5px 20px 12px; color: #fff; background-color: #221815; text-align: center; font-weight: 400;}
 footer .copyright-area span { font-size: 11px; font-size: 1.1rem; color: #fff; display:block; }
 footer .copyright-area a { display:block; font-size: 13px; font-size: 1.3rem; line-height:2.1; color: #efefef; }
@@ -290,7 +290,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 }
 @media (max-width:960px){
 	.main_container ul.capacity_content{ padding: 0px 0 30px 0;}
-	.main_container ul.capacity_content li .capacity_img{ padding: 0 0 10px 0;}
+	.main_container ul.capacity_content li .capacity_img{ padding: 0 0 10px 0; min-height: 187px;}
 	.main_container ul.capacity_content li .capacity_img span{ padding-top: 100px;}
 	.main_container ul.capacity_content li .capacity_img::after{ top: 54px; right: calc(50% - 25px);}
 	/*.main_container ul.capacity_content li p.star{ top: 10px; width: calc( 100% - 20px);}*/
@@ -314,7 +314,6 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 
 	.main_container .support_area_list ul.area_info li h4.area_title{font-size: 14px;}
 	.main_container .support_area_list ul.area_info li p.info{ font-size: 13px; }
-	.main_container .sub_title_content::after{ width:calc(100% + 40px); left: -20px; }
 	.main_container .sub_title_content h4{ font-size: 18px; top: 15px; }
 	.main_container .sub_title_content h4 span{ padding: 0 20px; }
 	.main_container .sub_title_content p{ font-size: 14px; }
@@ -324,7 +323,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container ul.capacity_content li a{ padding: 30px 10px 0px 10px;}
 
 	.main_container .travel_plan_content_two .plan_info{ width: 100%; }
-	.main_container .travel_plan_content_two .right_info{ width: 100%; max-width: initial; margin-top: 25px; }
+	.main_container .travel_plan_content_two .right_info{ width: 100%; max-width: initial; margin-top: 25px; padding-top: 16px;}
 	.main_container .travel_plan_content_two .SNS_icon{ width: 100%; text-align: center; padding-top: 10px; }
 	.main_container .travel_plan_content_two .SNS_icon::after{ background-image: url(../images/svg/SNS_icons_mob.svg); height: 36px; }
 	.main_container .travel_plan_content_two .right_info .SNS_icon{ float: left; width: 42%; }
@@ -376,7 +375,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .travel_plan_content_two .country_amount h4{ font-size: 16px; }
 	.main_container .travel_plan_content_two .country_amount p{ font-size: 13px; display: block; }
 
-	.main_container .sub_title_content h4{ font-size: 16px; width: calc(100% + 40px); left: -20px; }
+	.main_container .sub_title_content h4{ font-size: 16px;}
 	.main_container .sub_title_content h4 span{ padding: 0 15px; }
 	.main_container .sub_title_content p{font-size: 13px; padding-top: 0;}
 	.main_container .sub_title_content p span{ line-height: 18px; text-align: left; padding-top: 6px; }
@@ -384,7 +383,8 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.inside_container .area_content ul.area_list li .area_info{min-height: initial;}
 
 	.main_container ul.capacity_content li p.star{ font-size: 12px;}
-	.main_container ul.capacity_content li .capacity_img{ font-size: 10px; line-height: initial; min-height: 140px; }
+	.main_container ul.capacity_content li .capacity_img{ font-size: 10px; line-height: initial; }
+	.main_container ul.capacity_content li .capacity_img span{ padding-top: 60px; }
 	.main_container ul.capacity_content li .capacity_img::after{ width: 32px; top: 52px; height: 34px; right: calc(50% - 16px); }
 
 	.main_container .data_flow{ border-width: 1px; }
@@ -398,6 +398,8 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .tab_capacity .tab_inner img{ width: 44px; }
 	.main_container .tab_capacity .tab_inner ul li{ width: calc(97% / 3); vertical-align: top; padding: 20px 0 0 0;}
 	.main_container .tab_capacity .tab_inner p.app_title, .main_container .tab_capacity .tab_inner p.return{ font-size: 12px; }
+
+	footer div.inner{padding: 20px;}
 }	
 @media (max-width: 640px){
 	.sp {display: block !important;}
@@ -413,7 +415,11 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	footer .copyright-area a{ font-size: 1.3rem; color: #fff;}
 }
 @media (max-width:599px){
-	.main_container h3.top_title{ font-size: 17px; }
+	.main_container h3.top_title{ font-size: 17px; margin-left: -20px}
+	.main_container .area_content{ width:100%;}
+	.main_container .travel_plan_content, ul.area_list, .main_container .travel_plan_content_two,.main_container .tab_capacity, .main_container ul.note { width: calc(100% - 40px); margin: 0 auto; }
+	.main_container ul.capacity_content{ width: calc(100% - 20px); margin: 0 auto; }
+	.main_container .tab_capacity .tab_inner ul{ width: 100%; }
 	.main_container .area_content ul.area_list li a{ min-height: 175px;}
 	.main_container .area_content ul.area_list li .area_photo{ height: 92px; }
 	.main_container .area_content ul.area_list li .area_info{ min-height: 108px; padding-bottom: 0;}
@@ -436,21 +442,23 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container ul.capacity_content li{ padding: 3px; }
 	.main_container ul.capacity_content li a{ font-size: 12px; }
 	.main_container ul.capacity_content li a{ border-radius: 10px; padding-left: 1px; padding-right: 1px; }
+	.main_container ul.capacity_content li .capacity_img{ min-height: 140px; }
 	.main_container ul.capacity_content li .capacity_img span{ font-size: 15px; padding-top: 56px; }
+	.main_container ul.capacity_content li .capacity_img::after{ top: 48px; }
 
 	.inside_container .top_banner h3{ font-size: 20px; }
 	.inside_container .top_banner p.sub_title{ font-size: 14px; padding-top: 5px; }
 
 	.main_container .top_banner .middle_content p.left_p{ font-size: 11px; }
 	.main_container .travel_plan_content .area_photo{ height:100px;}
-	.main_container .choosed_area{ margin: 0 auto 0px auto; width: calc(100% + 40px); margin-left: -20px; border-width: 1px; }
+	.main_container .choosed_area{ margin: 0 auto 0px auto; border-width: 1px; }
 	.main_container .choosed_area p.left_p{ width: 120px; font-size: 11px; }
 	.main_container .choosed_area p.area_title{ font-size: 14px; padding: 8px 10px; }
 	.main_container .choosed_area p.left_p::after{ border-right: 1px solid #333; }
 
 	.main_container .area_content{ padding: 0 0 25px 0;}
-	.main_container h3.top_title{width: calc(100% + 40px); margin-left: -20px;}
 	.main_container .tab_capacity .tab_inner{ padding: 15px; }
+	.main_container .btn_more{ padding: 10px 25px;}
 }
 @media (max-width:400px){
 	footer .copyright-area a ,footer .copyright-area span{ font-size: 0.875rem; }
@@ -472,7 +480,8 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 }
 @media (max-width:350px){
 	.main_container h3.top_title{ font-size: 14px; }
-	.main_container .area_content{ padding:0 0 10px 0; width: calc( 100% - 20px); }
+	.main_container .area_content{ padding:0 0 10px 0;}
+	.main_container .travel_plan_content, ul.area_list{ width: calc(100% - 20px); margin: 0 auto; }
 	.main_container .area_content ul.area_list li a{ min-height: 135px;}
 	.main_container .area_content ul.area_list li h3.area_title{ font-size: 14px; }
 	.main_container .area_content ul.area_list li h4.area_sub_title{ font-size: 11px; }
