--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -152,7 +152,8 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 
 .main_container ul.capacity_content li p.price{ text-align: center; color: #FF0000; font-weight: 600; padding: 10px 0; }
 .main_container ul.capacity_content li .labels{ position: absolute; top: 6px; left: 10px; }
-.main_container ul.capacity_content li .labels p.star{ font-size: 11px;}
+.main_container ul.capacity_content li .labels p.star{ padding-left: 28px; }
+.main_container ul.capacity_content li .labels p.star::after{ width: 22px; height: 22px; top: calc(50% - 12px);}
 .main_container ul.capacity_content li .labels p.hot{font-size: 12px;}
 
 .main_container ul.note{ width: 100%; max-width: 1100px; margin: 0 auto; }
@@ -212,6 +213,16 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .btn_more{ font-size: 14px; padding: 10px 5px; }
 .main_container .btn_more a{ background-color: #FFC924; display: block; border:1px solid #333; padding: 5px 10px; color: #333; position: relative; }
 .main_container .btn_more a::after{ content: ""; position: absolute; top: calc(50% - 7.5px); right: 10px; width: 15px; height: 15px; background-image: url(../images/svg/arr_more_k.svg); }
+
+.main_container .premium_plan{ width: 100%; background-color: #eef8f9; padding:25px 20px; max-width: 1100px; margin: 0 auto; }
+.main_container .premium_plan .text_info{ float: left; width: 68%; }
+.main_container .premium_plan .text_info h4{ font-size: 16px; border-bottom: 3px solid #ffc923; padding-bottom: 10px; }
+.main_container .premium_plan .text_info p{ font-size: 13px; padding: 10px 0; font-weight: 400; }
+
+.main_container .premium_plan .plan_img{ float: right; width: 32%; max-width: 305px; padding-left: 10px; }
+.main_container .premium_plan .plan_img div{ float: left; width: 50%; padding: 0 10px; }
+.main_container .premium_plan .plan_img div img{ width: 100%; }
+.main_container .premium_plan .plan_img div p{ padding: 10px 0; font-size: 13px; font-weight: 500; text-align: center;}
 
 .inside_container .top_banner{ background-color: inherit; }
 .inside_container .top_banner h3{ font-size: 40px; color:#fff; font-weight: 600; color: #fff; text-shadow: 0 0 5px rgba(0,0,0,.9); }
@@ -333,6 +344,10 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .travel_plan_content_two .right_info .for_left{ width: 58%; float: left; padding-right: 10px; }
 	.main_container .travel_plan_content_two .country_info .sub_info_box{ width: 100%; padding: 0; }
 	.main_container .travel_plan_content_two .country_amount h4{ padding: 0; font-size: 18px; }
+
+	.main_container .premium_plan .text_info{ width: 100%;}
+	.main_container .premium_plan .plan_img{ width: 100%; max-width: 100%; padding-left: 0; padding: 10px 0; }
+	.main_container .premium_plan .plan_img div{ padding: 0 15px; }
 }
 @media (min-width:769px) {
 	footer div.inner {margin: 0 auto; padding: 4em 0; padding-bottom:120px;text-align: left; background: url(../images/bg_footer.jpg) right bottom no-repeat; background-size: 663px 173px;}
@@ -419,7 +434,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 @media (max-width:599px){
 	.main_container h3.top_title{ font-size: 17px; margin-left: -20px}
 	.main_container .area_content{ width:100%;}
-	.main_container .travel_plan_content, ul.area_list, .main_container .travel_plan_content_two,.main_container .tab_capacity, .main_container ul.note { width: calc(100% - 40px); margin: 0 auto; }
+	.main_container .travel_plan_content, ul.area_list, .main_container .travel_plan_content_two,.main_container .tab_capacity, .main_container ul.note, .main_container .premium_plan { width: calc(100% - 40px); margin: 0 auto; }
 	.main_container ul.capacity_content{ width: calc(100% - 20px); margin: 0 auto; }
 	.main_container .tab_capacity .tab_inner ul{ width: 100%; }
 	.main_container .area_content ul.area_list li a{ min-height: 175px;}
@@ -460,10 +475,14 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .area_content{ padding: 0 0 25px 0;}
 	.main_container .tab_capacity .tab_inner{ padding: 15px; }
 	.main_container .btn_more{ padding: 10px 25px;}
+	.main_container .premium_plan{ margin: 20px auto; }
 }
 @media (max-width:500px){
 	.main_container ul.capacity_content li .capacity_img span.main_title{ font-size: 12.5px; }
 	.main_container ul.capacity_content li .capacity_img span.top_sub_title{ padding: 0 5px; }
+	.main_container .premium_plan{ padding: 20px 20px 0 20px; }
+	.main_container .premium_plan .plan_img div{ padding: 0 10px; }
+	.main_container .premium_plan .plan_img div p{ font-size: 12px;}
 }
 @media (max-width:400px){
 	footer .copyright-area a ,footer .copyright-area span{ font-size: 0.875rem; }
@@ -482,6 +501,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container ul.capacity_content li p.star{ font-size: 10px; }
 	.main_container ul.note li p{ font-size: 12px; }
 	.main_container .tab_capacity > ul > li{ border-radius: 0 20px 0 0;}
+	.main_container .tab_capacity > ul > li p{ font-size: 11px; }
 }
 @media (max-width:350px){
 	.main_container h3.top_title{ font-size: 14px; }
@@ -497,9 +517,10 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container ul.capacity_content li .capacity_img span.main_title{ font-size: 12px; }
 	.main_container .tab_capacity .tab_inner img{ width: 38px; }
 	.main_container .tab_capacity .tab_inner p.ex{ font-size: 10px; }
-    .main_container .tab_capacity > ul > li{padding: 2px 6px;}
-	.main_container .tab_capacity > ul > li p{ font-size: 10px; padding-left: 22px;}
-	.main_container .tab_capacity > ul > li p::after{left: 4px; top: 4px;}
+    .main_container .tab_capacity > ul > li{ padding: 2px 6px; width: calc(98% / 3);}
+	.main_container .tab_capacity > ul > li p{ font-size: 9px; padding-left: 17px;}
+	.main_container .tab_capacity > ul > li p::after{left: 2px; top: 4px; width: 10px;}
+	.main_container .tab_capacity .tab_inner ul li{ width: calc(96% / 3); }
 	.main_container .tab_capacity .tab_inner p.app_title, .main_container .tab_capacity .tab_inner p.return{ font-size: 11px; }
 	.main_container .sub_title_content p span{ font-size: 10px;}
 }
